--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "main": "server.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "dev": "nodemon server.js",
     "start": "node server.js",
